--- a/about.html
+++ b/about.html
@@ -39,26 +39,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="container">
 				<div class="headertop_nav">
 					<ul>
-						<li><a href="http://www.coastaltradingandpawnauburnme.com">Auburn / </a>
-							<a href="http://www.augustapawnandjewelry.com">Augusta /</a>
-							<a href="http://www.coastaltradingpostandpawn.com">Brunswick /</a>
+						<li><a href="http://www.coastaltradingandpawnauburnme.com" rel="nofollow">Auburn / </a>
+							<a href="http://www.augustapawnandjewelry.com" rel="nofollow">Augusta /</a>
+							<a href="http://www.coastaltradingpostandpawn.com" rel="nofollow">Brunswick /</a>
 						</li>
-						<li><a href="http://lewistonpawnshop.com">Lewiston /</a>
-							<a href="http://www.coastaltradingandpawnportlandme.com/">Portland Forest Ave /</a>
-							<a href="http://www.coastaltradingandpawn.com">Portland St. John</a>
+						<li><a href="http://lewistonpawnshop.com" rel="nofollow">Lewiston /</a>
+							<a href="http://www.coastaltradingandpawnportlandme.com/" rel="nofollow">Portland Forest Ave /</a>
+							<a href="http://www.coastaltradingandpawn.com" rel="nofollow">Portland St. John</a>
 						</li>
 					</ul>
 				</div>
-				<div class="header-top-right">
-					<div class="login_box">
-						<div id="loginContainer">
-							<div id="loginBox">
-								<form id="loginForm">
-								</form>
-							</div>
-						</div>
-					</div>
-				</div>
+
 				<div class="clearfix"></div>
 			</div>
 		</div>
@@ -78,12 +69,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<li><a href="index.html">Home</a></li>
 							<li class="dropdown"><a href="index.html">STORES</a>
 								<ul class="dropdown2">
-									<li><a href="http://www.coastaltradingandpawnauburnme.com">AUBURN</a></li>
-									<li><a href="http://www.augustapawnandjewelry.com">AUGUSTA</a></li>
-									<li><a href="http://www.coastaltradingpostandpawn.com">BRUNSWICK</a></li>
-									<li><a href="http://lewistonpawnshop.com">LEWISTON</a></li>
-									<li><a href="http://www.coastaltradingandpawnportlandme.com/">PORTLAND FOREST AVENUE</a></li>
-									<li><a href="http://www.coastaltradingandpawn.com">PORTLAND SAINT. JOHN STREET</a></li>
+									<li><a href="http://www.coastaltradingandpawnauburnme.com" rel="nofollow">AUBURN</a></li>
+									<li><a href="http://www.augustapawnandjewelry.com" rel="nofollow">AUGUSTA</a></li>
+									<li><a href="http://www.coastaltradingpostandpawn.com" rel="nofollow">BRUNSWICK</a></li>
+									<li><a href="http://lewistonpawnshop.com" rel="nofollow">LEWISTON</a></li>
+									<li><a href="http://www.coastaltradingandpawnportlandme.com/" rel="nofollow">PORTLAND FOREST
+											AVENUE</a></li>
+									<li><a href="http://www.coastaltradingandpawn.com" rel="nofollow">PORTLAND SAINT. JOHN STREET</a></li>
 								</ul>
 							</li>
 							<li class="dropdown"><a href="about.html">ABout</a></li>
@@ -105,23 +97,33 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!------------ Start Content ---------------->
 	<main class="main">
 		<section class="company_logos wow bounceIn" data-wow-delay="0.4s">
+			<h3>OVER 30,000 SQUARE FEET OF MUSICAL COMMERCIAL HOME OFFICE MERCHANDISE IN STOCK AT 6 DIFFERENT STORES</h3>
 			<div class="ocarousel_slider">
 				<div class="ocarousel example_photos" data-ocarousel-perscroll="3">
 					<div class="ocarousel_window">
-						<a href="#" title="Buy gold"><img src="images/g10.jpg" class="img-responsive" alt="" /></a>
-						<a href="#" title="Store front"> <img src="images/FA5.jpg" class="img-responsive" alt="" /></a>
-						<a href="#" title="Survial food"><img src="images/FA2.jpg" class="img-responsive" alt="" /></a>
-						<a href="#" title="Survial food"><img src="images/FA4.jpg" class="img-responsive" alt="" /></a>
-						<a href="#" title="motorcycle gear"><img src="images/au11.jpg" class="img-responsive" alt="" /></a>
-						<a href="#" title="Ski gear"><img src="images/lps10.jpg" class="img-responsive" alt="" /></a>
-						<a href="#" title="Electronics"><img src="images/au7.jpg" class="img-responsive" alt="" /></a>
-						<a href="#" title="store ad"><img src="images/g13.jpg" class="img-responsive" alt="" /></a>
-						<a href="#" title="Audio"><img src="images/au9.jpg" class="img-responsive" alt="" /></a>
-						<a href="#" title="Watchesp"> <img src="images/au8.jpg" class="img-responsive" alt="" /></a>
-						<a href="#" title="Jewelry"><img src="images/au2.jpg" class="img-responsive" alt="" /></a>
-						<a href="#" title="Jewelry"><img src="images/au4.jpg" class="img-responsive" alt="" /></a>
-						<a href="#" title="Power Tools"><img src="images/lps17.jpg" class="img-responsive" alt="" /></a>
-						<a href="#" title="Power Tools"><img src="images/lps14.jpg" class="img-responsive" alt="" /></a>
+						<a href="#" title="Buy gold"><img src="images/company-logos/g10.jpg" class="img-responsive" alt="g10" /></a>
+						<a href="#" title="Store front"> <img src="images/company-logos/FA5.jpg" class="img-responsive"
+								alt="FA5" /></a>
+						<a href="#" title="Survial food"><img src="images/company-logos/FA2.jpg" class="img-responsive"
+								alt="FA2" /></a>
+						<a href="#" title="Survial food"><img src="images/company-logos/FA4.jpg" class="img-responsive"
+								alt="FA4" /></a>
+						<a href="#" title="motorcycle gear"><img src="images/company-logos/au11.jpg" class="img-responsive"
+								alt="au11" /></a>
+						<a href="#" title="Ski gear"><img src="images/company-logos/lps10.jpg" class="img-responsive"
+								alt="lps10" /></a>
+						<a href="#" title="Electronics"><img src="images/company-logos/au7.jpg" class="img-responsive"
+								alt="au7" /></a>
+						<a href="#" title="store ad"><img src="images/company-logos/g13.jpg" class="img-responsive" alt="g13" /></a>
+						<a href="#" title="Audio"><img src="images/company-logos/au9.jpg" class="img-responsive" alt="au9" /></a>
+						<a href="#" title="Watchesp"> <img src="images/company-logos/au8.jpg" class="img-responsive"
+								alt="au8" /></a>
+						<a href="#" title="Jewelry"><img src="images/company-logos/au2.jpg" class="img-responsive" alt="au2" /></a>
+						<a href="#" title="Jewelry"><img src="images/company-logos/au4.jpg" class="img-responsive" alt="au4" /></a>
+						<a href="#" title="Power Tools"><img src="images/company-logos/lps17.jpg" class="img-responsive"
+								alt="lps17" /></a>
+						<a href="#" title="Power Tools"><img src="images/company-logos/lps14.jpg" class="img-responsive"
+								alt="lps14" /></a>
 					</div>
 					<span>
 						<a href="#" data-ocarousel-link="left" class="prev"><i class="fa fa-angle-left"></i> </a>
@@ -160,10 +162,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div>
 					</div>
 					<div class="col-md-4">
-						<img src="images/side-ads4.jpg" width="350" height="232">
+						<img src="images/company-logos/side-ads4.jpg" width="350" height="232">
 					</div>
 					<div class="col-md-4">
-						<img src="images/side-ads2.jpg" width="350" height="232">
+						<img src="images/company-logos/side-ads2.jpg" width="350" height="232">
 					</div>
 				</div>
 			</div>
@@ -176,38 +178,46 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<h3>QUICK NAVIGATION</h3>
 							<div class="course_demo">
 								<ul id="flexiselDemo3">
-									<li><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626"><img
-												src="images/v1.png" width="140" height="140" class="img-responsive" /></a>
+									<li><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626" rel="nofollow"><img
+												src="images/content-bottom/v1.png" width="140" height="140" class="img-responsive"
+												alt="facebook" /></a>
 										<div class="desc">
-											<h3><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626">Social Media</a>
+											<h3><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626"
+													rel="nofollow">Social
+													Media</a>
 											</h3>
-											<p><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626">Find us and like
+											<p><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626"
+													rel="nofollow">Find us and
+													like
 													us on facebook, google+<br>
 												</a></p>
 										</div>
 									</li>
-									<li><a href="contact.html"><img src="images/v2.png" class="img-responsive" /></a>
+									<li><a href="contact.html"><img src="images/content-bottom/v2.png" class="img-responsive"
+												alt="v2" /></a>
 										<div class="desc">
 											<h3><a href="contact.html">Contact Us</a></h3>
 											<p><a href="contact.html">We are here to answer any questions you have today <br>
 												</a></p>
 										</div>
 									</li>
-									<li><a href="FAQS.html"><img src="images/v3.png" class="img-responsive" /></a>
+									<li><a href="FAQS.html"><img src="images/content-bottom/v3.png" class="img-responsive" alt="v3" /></a>
 										<div class="desc">
 											<h3><a href="FAQS.html">FAO'S</a></h3>
 											<p><a href="FAQS.html">How does a pawnshop work? Pawnbrokers lend<br>
 												</a></p>
 										</div>
 									</li>
-									<li><a href="contact.html"><img src="images/v4.jpg" class="img-responsive" /></a>
+									<li><a href="contact.html"><img src="images/content-bottom/v4.jpg" class="img-responsive"
+												alt="v4" /></a>
 										<div class="desc">
 											<h3><a href="contact.html">Location</a></h3>
 											<p><a href="contact.html"> We are located at 543 Forest Ave, Portland<br>
 												</a></p>
 										</div>
 									</li>
-									<li><a href="warranty.html"><img src="images/v5.png" class="img-responsive" /></a>
+									<li><a href="warranty.html"><img src="images/content-bottom/v5.png" class="img-responsive"
+												alt="v5" /></a>
 										<div class="desc">
 											<h3><a href="warranty.html">Guarantee</a></h3>
 											<p><a href="warranty.html">We guarantee our Merchandise to be exactly<br>
@@ -215,6 +225,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										</div>
 									</li>
 								</ul>
+
 								<script type="text/javascript" src="js/jquery.flexisel.js"></script>
 							</div>
 						</div>
@@ -268,15 +279,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="company_address">
 							<p>Coastal Trading &amp; Pawn</p>
 							<p>543 Forest Ave, Portland, ME 04101</p>
-							<p>Phone:(207) 773-0338</p>
+							<p><a href="tel:+2077730338">Phone:(207) 773-0338</a></p>
 							<p>Hours: Mon - Fri 9AM - 5:30PM</p>
 							<p> Sat. 9AM - 2PM. Summer - 12PM</p>
 						</div>
 						<ul class="socials">
 							<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
 							<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-							<li><a href="https://twitter.com/coastal_trading"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626"><i
+							<li><a href="https://twitter.com/coastal_trading" rel="nofollow"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626" rel="nofollow"><i
 										class="fa fa-facebook"></i></a></li>
 						</ul>
 					</div>
