--- a/contact.html
+++ b/contact.html
@@ -38,26 +38,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="container">
 				<div class="headertop_nav">
 					<ul>
-						<li><a href="http://www.coastaltradingandpawnauburnme.com">Auburn / </a>
-							<a href="http://www.augustapawnandjewelry.com">Augusta /</a>
-							<a href="http://www.coastaltradingpostandpawn.com">Brunswick /</a>
+						<li><a href="http://www.coastaltradingandpawnauburnme.com" rel="nofollow">Auburn / </a>
+							<a href="http://www.augustapawnandjewelry.com" rel="nofollow">Augusta /</a>
+							<a href="http://www.coastaltradingpostandpawn.com" rel="nofollow">Brunswick /</a>
 						</li>
-						<li><a href="http://lewistonpawnshop.com">Lewiston /</a>
-							<a href="http://www.coastaltradingandpawnportlandme.com/">Portland Forest Ave /</a>
-							<a href="http://www.coastaltradingandpawn.com">Portland St. John</a>
+						<li><a href="http://lewistonpawnshop.com" rel="nofollow">Lewiston /</a>
+							<a href="http://www.coastaltradingandpawnportlandme.com/" rel="nofollow">Portland Forest Ave /</a>
+							<a href="http://www.coastaltradingandpawn.com" rel="nofollow">Portland St. John</a>
 						</li>
 					</ul>
 				</div>
-				<div class="header-top-right">
-					<div class="login_box">
-						<div id="loginContainer">
-							<div id="loginBox">
-								<form id="loginForm">
-								</form>
-							</div>
-						</div>
-					</div>
-				</div>
+
 				<div class="clearfix"></div>
 			</div>
 		</div>
@@ -77,12 +68,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<li><a href="index.html">Home</a></li>
 							<li class="dropdown"><a href="index.html">STORES</a>
 								<ul class="dropdown2">
-									<li><a href="http://www.coastaltradingandpawnauburnme.com">AUBURN</a></li>
-									<li><a href="http://www.augustapawnandjewelry.com">AUGUSTA</a></li>
-									<li><a href="http://www.coastaltradingpostandpawn.com">BRUNSWICK</a></li>
-									<li><a href="http://lewistonpawnshop.com">LEWISTON</a></li>
-									<li><a href="http://www.coastaltradingandpawnportlandme.com/">PORTLAND FOREST AVENUE</a></li>
-									<li><a href="http://www.coastaltradingandpawn.com">PORTLAND SAINT. JOHN STREET</a></li>
+									<li><a href="http://www.coastaltradingandpawnauburnme.com" rel="nofollow">AUBURN</a></li>
+									<li><a href="http://www.augustapawnandjewelry.com" rel="nofollow">AUGUSTA</a></li>
+									<li><a href="http://www.coastaltradingpostandpawn.com" rel="nofollow">BRUNSWICK</a></li>
+									<li><a href="http://lewistonpawnshop.com" rel="nofollow">LEWISTON</a></li>
+									<li><a href="http://www.coastaltradingandpawnportlandme.com/" rel="nofollow">PORTLAND FOREST
+											AVENUE</a></li>
+									<li><a href="http://www.coastaltradingandpawn.com" rel="nofollow">PORTLAND SAINT. JOHN STREET</a></li>
 								</ul>
 							</li>
 							<li class="dropdown"><a href="about.html">ABout</a></li>
@@ -100,6 +92,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 		</div>
 	</header>
+
 	<!-- Ends Header -->
 	<!------------ Start Content ---------------->
 	<main class="main">
@@ -119,7 +112,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									PORTLaND, MAINE 04101.</p>
 								<dl>
 									<dt></dt>
-									<dd>Telephone:<span> +1 207 773-0338</span></dd>
+									<dd>Telephone:<span><a href="tel:+1 207 773-0338"> +1 207 773-0338</a></span></dd>
 									<dd>Business Hours: <span> Mon - Fri 9AM - 5PM</span></dd>
 									<dd>Saturday 9AM - 2PM</span></dd>
 								</dl>
@@ -154,39 +147,46 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<h3>QUICK NAVIGATION</h3>
 							<div class="course_demo">
 								<ul id="flexiselDemo3">
-									<li><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626"><img
-												src="images/v1.png" width="140" height="140" class="img-responsive" /></a>
+									<li><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626" rel="nofollow"><img
+												src="images/content-bottom/v1.png" width="140" height="140" class="img-responsive"
+												alt="facebook" /></a>
 										<div class="desc">
-											<h3><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626">Social Media</a>
+											<h3><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626"
+													rel="nofollow">Social
+													Media</a>
 											</h3>
-											<p><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626">Find us and like
-													us
-													on facebook, google+<br>
+											<p><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626"
+													rel="nofollow">Find us and
+													like
+													us on facebook, google+<br>
 												</a></p>
 										</div>
 									</li>
-									<li><a href="contact.html"><img src="images/v2.png" class="img-responsive" /></a>
+									<li><a href="contact.html"><img src="images/content-bottom/v2.png" class="img-responsive"
+												alt="v2" /></a>
 										<div class="desc">
 											<h3><a href="contact.html">Contact Us</a></h3>
 											<p><a href="contact.html">We are here to answer any questions you have today <br>
 												</a></p>
 										</div>
 									</li>
-									<li><a href="FAQS.html"><img src="images/v3.png" class="img-responsive" /></a>
+									<li><a href="FAQS.html"><img src="images/content-bottom/v3.png" class="img-responsive" alt="v3" /></a>
 										<div class="desc">
 											<h3><a href="FAQS.html">FAO'S</a></h3>
 											<p><a href="FAQS.html">How does a pawnshop work? Pawnbrokers lend<br>
 												</a></p>
 										</div>
 									</li>
-									<li><a href="contact.html"><img src="images/v4.jpg" class="img-responsive" /></a>
+									<li><a href="contact.html"><img src="images/content-bottom/v4.jpg" class="img-responsive"
+												alt="v4" /></a>
 										<div class="desc">
 											<h3><a href="contact.html">Location</a></h3>
 											<p><a href="contact.html"> We are located at 543 Forest Ave, Portland<br>
 												</a></p>
 										</div>
 									</li>
-									<li><a href="warranty.html"><img src="images/v5.png" class="img-responsive" /></a>
+									<li><a href="warranty.html"><img src="images/content-bottom/v5.png" class="img-responsive"
+												alt="v5" /></a>
 										<div class="desc">
 											<h3><a href="warranty.html">Guarantee</a></h3>
 											<p><a href="warranty.html">We guarantee our Merchandise to be exactly<br>
@@ -194,6 +194,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										</div>
 									</li>
 								</ul>
+
 								<script type="text/javascript" src="js/jquery.flexisel.js"></script>
 							</div>
 						</div>
@@ -220,9 +221,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="col-md-4 footer_grid">
 						<h4>You want it? We have it.</h4>
 						<p>Our Portland storefront is our newest location. Conveniently located on Forest Avenue and easy to find.
-							You will love the new feel of the store as well as the great prices and selection of the new and pre-owned
+							You will love the new feel of the store as well as the great prices and selection of the new and
+							pre-owned
 							inventory. We have the largest selection of estate jewelry in the Twin Cities. With 3 diamondologists on
-							site! Find diamonds with us priced for any budget! $19 to upwards of $20,000! We guarantee our jewelry to
+							site! Find diamonds with us priced for any budget! $19 to upwards of $20,000! We guarantee our jewelry
+							to
 							be exactly what we say it is. No one beats our price and quality on gold! Come see our extensive
 							collection or bring a piece to add.Dewalt
 							<a href="about.html"><i class="fa fa-chevron-circle-right"></i></a>
@@ -234,7 +237,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							&quot;up&quot; for something we're offering for sale. </p>
 						<p>&nbsp;</p>
 						<h5>Do most pawn customers lose their merchandise?</h5>
-						<p>On average, 70 percent of all loans are repaid. Repeat customers make up most of our business, similar to
+						<p>On average, 70 percent of all loans are repaid. Repeat customers make up most of our business, similar
+							to
 							any other lending or retail establishment <a href="FAQS.html"><i
 									class="fa fa-chevron-circle-right"></i></a></p>
 
@@ -244,15 +248,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="company_address">
 							<p>Coastal Trading &amp; Pawn</p>
 							<p>543 Forest Ave, Portland, ME 04101</p>
-							<p>Phone:(207) 773-0338</p>
+							<p><a href="tel:+2077730338">Phone:(207) 773-0338</a></p>
 							<p>Hours: Mon - Fri 9AM - 5:30PM</p>
 							<p> Sat. 9AM - 2PM. Summer - 12PM</p>
 						</div>
 						<ul class="socials">
 							<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
 							<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-							<li><a href="https://twitter.com/coastal_trading"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626"><i
+							<li><a href="https://twitter.com/coastal_trading" rel="nofollow"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626" rel="nofollow"><i
 										class="fa fa-facebook"></i></a></li>
 						</ul>
 					</div>
@@ -261,7 +265,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="footer_bottom">
 				<div class="copy_right">
-					<p>&copy; 2015 All Rights Reseverd <a href="/"></a> </p>
+					<p>&copy; 2015 All Rights Reseverd <a href="#"></a> </p>
 				</div>
 				<div class="footer_nav">
 					<ul>
