change tag rel for links

--- a/FAQS.html
+++ b/FAQS.html
@@ -40,13 +40,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="container">
 				<div class="headertop_nav">
 					<ul>
-						<li><a href="http://www.coastaltradingandpawnauburnme.com" rel="nofollow">Auburn / </a>
-							<a href="http://www.augustapawnandjewelry.com" rel="nofollow">Augusta /</a>
-							<a href="http://www.coastaltradingpostandpawn.com" rel="nofollow">Brunswick /</a>
+						<li><a href="http://www.coastaltradingandpawnauburnme.com" rel="nofollow noopener noreferrer"
+								target="_blank">Auburn / </a>
+							<a href="http://www.augustapawnandjewelry.com" rel="nofollow noopener noreferrer" target="_blank">Augusta
+								/</a>
+							<a href="http://www.coastaltradingpostandpawn.com" rel="nofollow noopener noreferrer"
+								target="_blank">Brunswick /</a>
 						</li>
-						<li><a href="http://lewistonpawnshop.com" rel="nofollow">Lewiston /</a>
-							<a href="http://www.coastaltradingandpawnportlandme.com/" rel="nofollow">Portland Forest Ave /</a>
-							<a href="http://www.coastaltradingandpawn.com" rel="nofollow">Portland St. John</a>
+						<li><a href="http://lewistonpawnshop.com" rel="nofollow noopener noreferrer" target="_blank">Lewiston /</a>
+							<a href="http://www.coastaltradingandpawnportlandme.com/" rel="nofollow noopener noreferrer"
+								target="_blank">Portland Forest Ave /</a>
+							<a href="http://www.coastaltradingandpawn.com" rel="nofollow noopener noreferrer" target="_blank">Portland
+								St. John</a>
 						</li>
 					</ul>
 				</div>
@@ -70,13 +75,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<li><a href="index.html">Home</a></li>
 							<li class="dropdown"><a href="index.html">STORES</a>
 								<ul class="dropdown2">
-									<li><a href="http://www.coastaltradingandpawnauburnme.com" rel="nofollow">AUBURN</a></li>
-									<li><a href="http://www.augustapawnandjewelry.com" rel="nofollow">AUGUSTA</a></li>
-									<li><a href="http://www.coastaltradingpostandpawn.com" rel="nofollow">BRUNSWICK</a></li>
-									<li><a href="http://lewistonpawnshop.com" rel="nofollow">LEWISTON</a></li>
-									<li><a href="http://www.coastaltradingandpawnportlandme.com/" rel="nofollow">PORTLAND FOREST
+									<li><a href="http://www.coastaltradingandpawnauburnme.com" rel="nofollow noopener noreferrer"
+											target="_blank">AUBURN</a></li>
+									<li><a href="http://www.augustapawnandjewelry.com" rel="nofollow noopener noreferrer"
+											target="_blank">AUGUSTA</a></li>
+									<li><a href="http://www.coastaltradingpostandpawn.com" rel="nofollow noopener noreferrer"
+											target="_blank">BRUNSWICK</a></li>
+									<li><a href="http://lewistonpawnshop.com" rel="nofollow noopener noreferrer"
+											target="_blank">LEWISTON</a></li>
+									<li><a href="http://www.coastaltradingandpawnportlandme.com/" rel="nofollow noopener noreferrer"
+											target="_blank">PORTLAND FOREST
 											AVENUE</a></li>
-									<li><a href="http://www.coastaltradingandpawn.com" rel="nofollow">PORTLAND SAINT. JOHN STREET</a></li>
+									<li><a href="http://www.coastaltradingandpawn.com" rel="nofollow noopener noreferrer"
+											target="_blank">PORTLAND SAINT. JOHN STREET</a></li>
 								</ul>
 							</li>
 							<li class="dropdown"><a href="about.html">ABout</a></li>
@@ -214,16 +225,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<h3>QUICK NAVIGATION</h3>
 							<div class="course_demo">
 								<ul id="flexiselDemo3">
-									<li><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626" rel="nofollow"><img
-												src="images/content-bottom/v1.png" width="140" height="140" class="img-responsive"
-												alt="facebook" /></a>
+									<li><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626"
+											rel="nofollow noopener noreferrer" target="_blank"><img src="images/content-bottom/v1.png"
+												width="140" height="140" class="img-responsive" alt="facebook" /></a>
 										<div class="desc">
 											<h3><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626"
-													rel="nofollow">Social
+													rel="nofollow noopener noreferrer" target="_blank">Social
 													Media</a>
 											</h3>
 											<p><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626"
-													rel="nofollow">Find us and
+													rel="nofollow noopener noreferrer" target="_blank">Find us and
 													like
 													us on facebook, google+<br>
 												</a></p>
@@ -322,9 +333,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<ul class="socials">
 							<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
 							<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-							<li><a href="https://twitter.com/coastal_trading" rel="nofollow"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626" rel="nofollow"><i
-										class="fa fa-facebook"></i></a></li>
+							<li><a href="https://twitter.com/coastal_trading" rel="nofollow noopener noreferrer" target="_blank"><i
+										class="fa fa-twitter"></i></a></li>
+							<li><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626"
+									rel="nofollow noopener noreferrer" target="_blank"><i class="fa fa-facebook"></i></a></li>
 						</ul>
 					</div>
 					<div class="clearfix"></div>
