--- a/index.html
+++ b/index.html
@@ -39,13 +39,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="container">
 				<div class="headertop_nav">
 					<ul>
-						<li><a href="http://www.coastaltradingandpawnauburnme.com" rel="nofollow">Auburn / </a>
-							<a href="http://www.augustapawnandjewelry.com" rel="nofollow">Augusta /</a>
-							<a href="http://www.coastaltradingpostandpawn.com" rel="nofollow">Brunswick /</a>
+						<li><a href="http://www.coastaltradingandpawnauburnme.com" rel="nofollow noopener noreferrer"
+								target="_blank">Auburn / </a>
+							<a href="http://www.augustapawnandjewelry.com" rel="nofollow noopener noreferrer" target="_blank">Augusta
+								/</a>
+							<a href="http://www.coastaltradingpostandpawn.com" rel="nofollow noopener noreferrer"
+								target="_blank">Brunswick /</a>
 						</li>
-						<li><a href="http://lewistonpawnshop.com" rel="nofollow">Lewiston /</a>
-							<a href="http://www.coastaltradingandpawnportlandme.com/" rel="nofollow">Portland Forest Ave /</a>
-							<a href="http://www.coastaltradingandpawn.com" rel="nofollow">Portland St. John</a>
+						<li><a href="http://lewistonpawnshop.com" rel="nofollow noopener noreferrer" target="_blank">Lewiston /</a>
+							<a href="http://www.coastaltradingandpawnportlandme.com/" rel="nofollow noopener noreferrer"
+								target="_blank">Portland Forest Ave /</a>
+							<a href="http://www.coastaltradingandpawn.com" rel="nofollow noopener noreferrer" target="_blank">Portland
+								St. John</a>
 						</li>
 					</ul>
 				</div>
@@ -69,13 +74,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<li><a href="index.html">Home</a></li>
 							<li class="dropdown"><a href="index.html">STORES</a>
 								<ul class="dropdown2">
-									<li><a href="http://www.coastaltradingandpawnauburnme.com" rel="nofollow">AUBURN</a></li>
-									<li><a href="http://www.augustapawnandjewelry.com" rel="nofollow">AUGUSTA</a></li>
-									<li><a href="http://www.coastaltradingpostandpawn.com" rel="nofollow">BRUNSWICK</a></li>
-									<li><a href="http://lewistonpawnshop.com" rel="nofollow">LEWISTON</a></li>
-									<li><a href="http://www.coastaltradingandpawnportlandme.com/" rel="nofollow">PORTLAND FOREST
+									<li><a href="http://www.coastaltradingandpawnauburnme.com" rel="nofollow noopener noreferrer"
+											target="_blank">AUBURN</a></li>
+									<li><a href="http://www.augustapawnandjewelry.com" rel="nofollow noopener noreferrer"
+											target="_blank">AUGUSTA</a></li>
+									<li><a href="http://www.coastaltradingpostandpawn.com" rel="nofollow noopener noreferrer"
+											target="_blank">BRUNSWICK</a></li>
+									<li><a href="http://lewistonpawnshop.com" rel="nofollow noopener noreferrer"
+											target="_blank">LEWISTON</a></li>
+									<li><a href="http://www.coastaltradingandpawnportlandme.com/" rel="nofollow noopener noreferrer"
+											target="_blank">PORTLAND FOREST
 											AVENUE</a></li>
-									<li><a href="http://www.coastaltradingandpawn.com" rel="nofollow">PORTLAND SAINT. JOHN STREET</a></li>
+									<li><a href="http://www.coastaltradingandpawn.com" rel="nofollow noopener noreferrer"
+											target="_blank">PORTLAND SAINT. JOHN STREET</a></li>
 								</ul>
 							</li>
 							<li class="dropdown"><a href="about.html">ABout</a></li>
@@ -111,7 +122,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<section class="row grids text-center">
 				<div class="col-md-4">
 					<div class="view view-tenth">
-						<a href="http://www.coastaltradingandpawnauburnme.com" rel="nofollow">
+						<a href="http://www.coastaltradingandpawnauburnme.com" rel="nofollow noopener noreferrer" target="_blank">
 							<div class="inner_content clearfix">
 								<div class="product_image">
 									<img src="images/pic7.jpg" width="380" height="263" class="img-responsive" alt="pic7">
@@ -129,7 +140,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="col-md-4">
 					<div class="view view-tenth">
-						<a href="http://www.augustapawnandjewelry.com" rel="nofollow">
+						<a href="http://www.augustapawnandjewelry.com" rel="nofollow noopener noreferrer" target="_blank">
 							<div class="inner_content clearfix">
 								<div class="product_image">
 									<img src="images/pic2.jpg" class="img-responsive" alt="pic2" />
@@ -148,7 +159,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="col-md-4">
 					<div class="view view-tenth">
-						<a href="http://www.coastaltradingpostandpawn.com" rel="nofollow">
+						<a href="http://www.coastaltradingpostandpawn.com" rel="nofollow noopener noreferrer" target="_blank">
 							<div class="inner_content clearfix">
 								<div class="product_image">
 									<img src="images/pic8.jpg" width="380" height="263" class="img-responsive" alt="pic8">
@@ -170,7 +181,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<section class="row grids text-center">
 				<div class="col-md-4">
 					<div class="view view-tenth">
-						<a href="http://www.lewistonpawnshop.com" rel="nofollow">
+						<a href="http://www.lewistonpawnshop.com" rel="nofollow noopener noreferrer" target="_blank">
 							<div class="inner_content clearfix">
 								<div class="product_image">
 									<img src="images/pic9.jpg" width="380" height="263" class="img-responsive" alt="pic9">
@@ -208,7 +219,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="col-md-4">
 					<div class="view view-tenth">
-						<a href="http://www.coastaltradingandpawn.com" rel="nofollow">
+						<a href="http://www.coastaltradingandpawn.com" rel="nofollow noopener noreferrer" target="_blank">
 							<div class="inner_content clearfix">
 								<div class="product_image">
 									<img src="images/pic4.jpg" class="img-responsive" alt="pic4" />
@@ -288,16 +299,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<h3>QUICK NAVIGATION</h3>
 							<div class="course_demo">
 								<ul id="flexiselDemo3">
-									<li><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626" rel="nofollow"><img
-												src="images/content-bottom/v1.png" width="140" height="140" class="img-responsive"
-												alt="facebook" /></a>
+									<li><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626"
+											rel="nofollow noopener noreferrer" target="_blank"><img src="images/content-bottom/v1.png"
+												width="140" height="140" class="img-responsive" alt="facebook" /></a>
 										<div class="desc">
 											<h3><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626"
-													rel="nofollow">Social
+													rel="nofollow noopener noreferrer" target="_blank">Social
 													Media</a>
 											</h3>
 											<p><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626"
-													rel="nofollow">Find us and
+													rel="nofollow noopener noreferrer" target="_blank">Find us and
 													like
 													us on facebook, google+<br>
 												</a></p>
@@ -396,9 +407,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<ul class="socials">
 							<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
 							<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-							<li><a href="https://twitter.com/coastal_trading" rel="nofollow"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626" rel="nofollow"><i
-										class="fa fa-facebook"></i></a></li>
+							<li><a href="https://twitter.com/coastal_trading" rel="nofollow noopener noreferrer" target="_blank"><i
+										class="fa fa-twitter"></i></a></li>
+							<li><a href="https://www.facebook.com/pages/Coastal-Trading-Pawn/202178063296626"
+									rel="nofollow noopener noreferrer" target="_blank"><i class="fa fa-facebook"></i></a></li>
 						</ul>
 					</div>
 					<div class="clearfix"></div>
