--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<script src="js/jquery.min.js" type="text/javascript"></script>
 	<script src="js/jquery.cbpFWSlider.min.js" type="text/javascript"></script>
 	<script src="js/jquery.openCarousel.js" type="text/javascript"></script>
+	<script src="js/wow.min.js" type="text/javascript"></script>
 	<!---- animated-css ---->
 	<link href="css/animate.css" rel="stylesheet" type="text/css" media="all">
 	<!----font-Awesome----->
@@ -304,7 +305,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</footer>
 
 
-	<script src="js/wow.min.js"></script>
+
 	<script src="js/main.js"></script>
 
 </body>
